# mrlvr-rcap2018

./: README.md
src/bring_up/launch/: p3at_configure_v1.launch
src/hector_quadrotor/hector_quadrotor_teleop/launch/: logitech_controller.launch  xbox_controller.launch
src/hector_quadrotor/hector_quadrotor_teleop/src/: quadrotor_teleop.cpp
src/mrl_exploration/launch/: mrl_explore.launch  mrl_explore_costmap.launch
src/mrl_exploration/src/: explore.cpp
src/mrl_map_merge/src/: map_merge.cpp
src/mrl_navigation_v1/: CMakeLists.txt  package.xml
src/mrl_navigation_v1/cfg/: mrl_rviz_navigation.rviz  rviz_navigation.rviz
src/mrl_navigation_v1/cfg/diff_drive/: costmap_common_params.yaml  teb_local_planner_params.yaml
src/mrl_navigation_v1/launch/: mrl_navigation_v1.launch  mrl_slam_gmapping.launch
src/mrl_rqt_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/mrl_rqt_dashboard/include/mrl_rqt_dashboard/: addrobot.h  bringup.h  cameraform.h  camerarobotwidget.h  commons.h  dashboard.h  dashboardform.h  dualcamera.h  image_view.h  projecttheme.h  ratio_layouted_frame.h  robot_widget.h  robotitem.h  robotmodel.h  setupform.h
src/mrl_rqt_dashboard/resource/: gmap.js  resource.qrc
src/mrl_rqt_dashboard/resource/qdarkstyle/: style.qss
src/mrl_rqt_dashboard/src/mrl_rqt_dashboard/: addrobot.cpp  addrobot.ui  bringup.cpp  cameraform.cpp  cameraform.ui  camerarobotwidget.cpp  commons.cpp  dashboard.cpp  dashboard.ui  dashboardform.cpp  dashboardform.ui  dualcamera.cpp  dualcamera.ui  image_view.cpp  image_view.ui  ratio_layouted_frame.cpp  robot_widget.cpp  robot_widget.ui  robotitem.cpp  robotitem.ui  robotmodel.cpp  setupform.cpp  setupform.ui
src/mrl_teleop_twist_keyboard/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
