<?xml version="1.0"?>
<package>
  <name>mrl_rqt_dashboard</name>
  <version>0.0.1</version>
  <description>The mrl_rqt_dashboard package</description>

  <maintainer email="m.h.shayesteh@gmail.com">Mohammad H. Shayesteh</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

  <run_depend>boost</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rviz</run_depend>


  <export>

    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
